mobile project page - header and timeline sections

--- a/SparcWeb/Pages/Project.razor
+++ b/SparcWeb/Pages/Project.razor
@@ -7,7 +7,8 @@
                 <div class="title">
                     <h2 class="title-1 semi-bold">Kode Kit</h2>
                     <a href="http://kodekit.io">
-                        <img src="./images/icons/Up-Right.svg" />
+                        <p class="title-2 mobile">Visit Website</p>
+                        <i class="material-icons">launch</i>
                     </a>
                 </div>
                 <div>
@@ -46,59 +47,60 @@
             </div>
             <div class="wrapper">
                 <div class="timeline-sidebar">
-                    <img src="./images/Sidebar.png" />
+                    <img src="./images/Sidebar.png" class="desktop"/>
+                    <img src="./images/Sidebar mobile.png" class="mobile" />
                 </div>
-                <div class="timeline-item">
-                    <div class="item-header">
-                        <p class="title-2 semi-bold">Kode Kit is ready to go!</p>
-                        <p class="timeline-date subtitle-small">AUG 22, 2022</p>
+                <div class="timeline-list">
+                    <div class="timeline-item">
+                        <div class="item-header">
+                            <p class="title-2 semi-bold">Kode Kit is ready to go!</p>
+                            <p class="timeline-date subtitle-small">AUG 22, 2022</p>
+                        </div>
+                        <div class="timeline-content">
+                            <p class="subtitle-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                        </div>
                     </div>
-                    <div class="timeline-content">
-                        <p class="subtitle-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                    <div class="timeline-item">
+                        <div class="item-header">
+                            <p class="title-2 semi-bold">It's on the way.</p>
+                            <p class="timeline-date subtitle-small">AUG 22, 2022</p>
+                        </div>
+                        <div class="timeline-content">
+                            <p class="subtitle-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                        </div>
                     </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="item-header">
-                        <p class="title-2 semi-bold">It's on the way.</p>
-                        <p class="timeline-date subtitle-small">AUG 22, 2022</p>
+                    <div class="timeline-item">
+                        <div class="item-header">
+                            <p class="title-2 semi-bold">One step closer.</p>
+                            <p class="timeline-date subtitle-small">AUG 22, 2022</p>
+                        </div>
+                        <div class="timeline-content">
+                            <p class="subtitle-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                        </div>
                     </div>
-                    <div class="timeline-content">
-                        <p class="subtitle-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                    <div class="timeline-item">
+                        <div class="item-header">
+                            <p class="title-2 semi-bold">How we are planning.</p>
+                            <p class="timeline-date subtitle-small">AUG 22, 2022</p>
+                        </div>
+                        <div class="timeline-content">
+                            <p class="subtitle-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                        </div>
                     </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="item-header">
-                        <p class="title-2 semi-bold">One step closer.</p>
-                        <p class="timeline-date subtitle-small">AUG 22, 2022</p>
+                    <div class="timeline-item">
+                        <div class="item-header">
+                            <p class="title-2 semi-bold">What do you think?</p>
+                            <p class="timeline-date subtitle-small">AUG 22, 2022</p>
+                        </div>
+                        <div class="timeline-content">
+                            <p class="subtitle-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                        </div>
                     </div>
-                    <div class="timeline-content">
-                        <p class="subtitle-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="item-header">
-                        <p class="title-2 semi-bold">How we are planning.</p>
-                        <p class="timeline-date subtitle-small">AUG 22, 2022</p>
-                    </div>
-                    <div class="timeline-content">
-                        <p class="subtitle-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="item-header">
-                        <p class="title-2 semi-bold">What do you think?</p>
-                        <p class="timeline-date subtitle-small">AUG 22, 2022</p>
-                    </div>
-                    <div class="timeline-content">
-                        <p class="subtitle-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
-                    </div>
-                </div>
-
-                <div class="read-more">
-                    <button class="btn-small">Read More</button>
                 </div>
             </div>
-
+            <div class="read-more">
+                <button class="btn-small">Read More</button>
+            </div>
         </div>
     </section>
 
