--- a/SparcWeb/wwwroot/Styles/Page/Project.scss
+++ b/SparcWeb/wwwroot/Styles/Page/Project.scss
@@ -15,12 +15,19 @@
                 justify-content: center;
                 margin-bottom: 6px;
 
-                img {
-                    margin-left: 32px;
+                i {
+                    margin-left: 20px;
+                    font-style: normal;
+                    font-size: 32px;
+                    color: $blue-500;
 
                     &:hover {
                         cursor: pointer;
                     }
+                }
+
+                .mobile {
+                    display: none;
                 }
             }
 
@@ -48,73 +55,73 @@
         .container {
             width: 446px;
             min-width: 200px;
+            padding: 0;
 
             .header {
                 margin-bottom: 30px;
 
                 p {
+                    margin-left: 66px;
                     color: var(--primary-500);
                 }
             }
 
             .wrapper {
-                position: relative;
-                margin: 0 auto;
+                display: flex;
+                gap: 26px;
 
                 .timeline-sidebar {
-                    position: absolute;
-                    left: -64px;
-                    top: 0;
-
-                    img {
+                    img.desktop {
                         width: 40px;
+                    }
+
+                    img.mobile {
+                        display: none;
                     }
                 }
 
-                .timeline-item {
-                    margin-bottom: 38px;
+                .timeline-list {
+                    width: 380px;
 
-                    .item-header {
-                        margin-bottom: 10px;
+                    .timeline-item {
+                        margin-bottom: 38px;
 
-                        .title-2 {
-                            line-height: 36px;
+                        .item-header {
+                            margin-bottom: 10px;
 
-                            &.semi-bold {
-                                font-family: 'NeueHaasDisplayMedium';
+                            .title-2 {
+                                &.semi-bold {
+                                    font-family: 'NeueHaasDisplayMedium';
+                                }
+                            }
+
+                            .timeline-date {
+                                color: var(--primary-500);
+                                font-family: 'IBMPlexSans-Regular';
+                                line-height: 21px;
                             }
                         }
 
-                        .timeline-date {
-                            color: var(--primary-500);
-                            font-family: 'IBMPlexSans-Regular';
-                            line-height: 21px;
-                        }
-                    }
-
-                    .timeline-content {
-                        p.subtitle-small {
-                            font-family: 'IBMPlexSans-Regular';
+                        .timeline-content {
+                            p.subtitle-small {
+                                font-family: 'IBMPlexSans-Regular';
+                            }
                         }
                     }
                 }
+            }
 
-                .timeline-item:nth-last-child(-n+2) {
-                    margin-bottom: 100px;
-                }
+            .read-more {
+                text-align: center;
+                max-width: 220px;
+                margin: auto;
 
-                .read-more {
-                    text-align: center;
-                    max-width: 220px;
-                    margin: auto;
-
-                    button {
-                        width: 100%;
-                        background: white;
-                        border: 1px solid var(--primary-900);
-                        border-radius: 5px;
-                        color: var(--primary-900);
-                    }
+                button {
+                    width: 100%;
+                    background: white;
+                    border: 1px solid var(--primary-900);
+                    border-radius: 5px;
+                    color: var(--primary-900);
                 }
             }
         }
@@ -224,119 +231,132 @@
 
     @media only screen and (max-width: 480px) {
         .hero-header {
-            padding-top: 76px;
-            padding-bottom: 30px;
+            padding-top: 105px;
+            padding-bottom: 85px;
 
             .header {
                 max-width: 725px;
                 margin: 0 auto;
+                text-align: center;
 
                 .title {
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    margin-bottom: 6px;
+                    display: block;
+                    margin-bottom: 32px;
 
-                    img {
-                        margin-left: 32px;
+                    h2 {
+                        margin-bottom: 9px;
+                    }
 
-                        &:hover {
-                            cursor: pointer;
+                    a {
+                        .title-2 {
+                            font-family: 'IBMPlexSans-Medium';
+                            font-size: 15px;
+                            color: $blue-500;
+                        }
+
+                        .mobile {
+                            display: inline-block;
+                        }
+
+                        i {
+                            margin-left: 5px;
+                            vertical-align: middle;
+                            color: $blue-500;
+                            font-size: 18px;
                         }
                     }
                 }
 
+                p.subtitle-1 {
+                    font-size: 16px;
+                }
+
                 .cta-flex {
-                    justify-content: center;
-                    margin-top: 40px;
-
-                    .profile-pic {
-                        max-width: 24px;
-                        max-height: 20px;
-
-                        img {
-                            max-width: 24px;
-                            max-height: 24px;
-                        }
-                    }
+                    margin-top: 32px;
                 }
             }
         }
 
         .timeline {
-            padding-top: 77px;
+            padding-top: 32px;
             padding-bottom: 100px;
 
             .container {
-                width: 446px;
+                margin: 0 auto;
+                width: 298px;
                 min-width: 200px;
 
                 .header {
-                    margin-bottom: 30px;
+                    margin-bottom: 16px;
 
                     p {
+                        margin-left: 46px;
                         color: var(--primary-500);
+                        font-size: 10px;
                     }
                 }
 
                 .wrapper {
-                    position: relative;
-                    margin: 0 auto;
+                    gap: 20px;
+                    margin-bottom: 12px;
 
                     .timeline-sidebar {
-                        position: absolute;
-                        left: -64px;
-                        top: 0;
+                        img.desktop {
+                            display: none;
+                        }
 
-                        img {
-                            width: 40px;
+                        img.mobile {
+                            display: inline-block;
+                            width: 26px;
                         }
                     }
 
-                    .timeline-item {
-                        margin-bottom: 38px;
+                    .timeline-list {
+                        width: 253px;
+                        line-height: 120%;
 
-                        .item-header {
-                            margin-bottom: 10px;
+                        .timeline-item {
+                            margin-bottom: 23px;
 
-                            .title-2 {
-                                line-height: 36px;
+                            .item-header {
+                                margin-bottom: 7px;
 
-                                &.semi-bold {
-                                    font-family: 'NeueHaasDisplayMedium';
+                                .title-2 {
+                                    font-size: 17px;
+                                    line-height: 26px;
+
+                                    &.semi-bold {
+                                        font-family: 'NeueHaasDisplayMedium';
+                                    }
+                                }
+
+                                .timeline-date {
+                                    font-size: 9px;
+                                    line-height: 13px;
                                 }
                             }
 
-                            .timeline-date {
-                                color: var(--primary-500);
-                                font-family: 'IBMPlexSans-Regular';
-                                line-height: 21px;
-                            }
-                        }
-
-                        .timeline-content {
-                            p.subtitle-small {
-                                font-family: 'IBMPlexSans-Regular';
+                            .timeline-content {
+                                p.subtitle-small {
+                                    font-size: 11px;
+                                    line-height: 14px;
+                                }
                             }
                         }
                     }
+                }
 
-                    .timeline-item:nth-last-child(-n+2) {
-                        margin-bottom: 100px;
-                    }
+                .read-more {
+                    text-align: center;
+                    max-width: 270px;
+                    margin: auto;
 
-                    .read-more {
-                        text-align: center;
-                        max-width: 220px;
-                        margin: auto;
-
-                        button {
-                            width: 100%;
-                            background: white;
-                            border: 1px solid var(--primary-900);
-                            border-radius: 5px;
-                            color: var(--primary-900);
-                        }
+                    button {
+                        width: 100%;
+                        background: white;
+                        border: 1px solid var(--primary-900);
+                        border-radius: 5px;
+                        color: var(--primary-900);
                     }
                 }
             }
