--- a/SparcWeb/wwwroot/css/app.css
+++ b/SparcWeb/wwwroot/css/app.css
@@ -502,7 +502,7 @@ nav .nav-mobile {
   nav .menu-toggle {
     display: inline-block;
     position: absolute;
-    top: 25px;
+    top: 20px;
     right: 25px;
     z-index: 60;
   }
@@ -1542,11 +1542,17 @@ nav .nav-mobile {
   justify-content: center;
   margin-bottom: 6px;
 }
-.project-page .hero-header .header .title img {
-  margin-left: 32px;
+.project-page .hero-header .header .title i {
+  margin-left: 20px;
+  font-style: normal;
+  font-size: 32px;
+  color: #2A74FF;
 }
-.project-page .hero-header .header .title img:hover {
+.project-page .hero-header .header .title i:hover {
   cursor: pointer;
+}
+.project-page .hero-header .header .title .mobile {
+  display: none;
 }
 .project-page .hero-header .header .cta-flex {
   justify-content: center;
@@ -1567,54 +1573,51 @@ nav .nav-mobile {
 .project-page .timeline .container {
   width: 446px;
   min-width: 200px;
+  padding: 0;
 }
 .project-page .timeline .container .header {
   margin-bottom: 30px;
 }
 .project-page .timeline .container .header p {
+  margin-left: 66px;
   color: var(--primary-500);
 }
 .project-page .timeline .container .wrapper {
-  position: relative;
-  margin: 0 auto;
+  display: flex;
+  gap: 26px;
 }
-.project-page .timeline .container .wrapper .timeline-sidebar {
-  position: absolute;
-  left: -64px;
-  top: 0;
-}
-.project-page .timeline .container .wrapper .timeline-sidebar img {
+.project-page .timeline .container .wrapper .timeline-sidebar img.desktop {
   width: 40px;
 }
-.project-page .timeline .container .wrapper .timeline-item {
+.project-page .timeline .container .wrapper .timeline-sidebar img.mobile {
+  display: none;
+}
+.project-page .timeline .container .wrapper .timeline-list {
+  width: 380px;
+}
+.project-page .timeline .container .wrapper .timeline-list .timeline-item {
   margin-bottom: 38px;
 }
-.project-page .timeline .container .wrapper .timeline-item .item-header {
+.project-page .timeline .container .wrapper .timeline-list .timeline-item .item-header {
   margin-bottom: 10px;
 }
-.project-page .timeline .container .wrapper .timeline-item .item-header .title-2 {
-  line-height: 36px;
-}
-.project-page .timeline .container .wrapper .timeline-item .item-header .title-2.semi-bold {
+.project-page .timeline .container .wrapper .timeline-list .timeline-item .item-header .title-2.semi-bold {
   font-family: "NeueHaasDisplayMedium";
 }
-.project-page .timeline .container .wrapper .timeline-item .item-header .timeline-date {
+.project-page .timeline .container .wrapper .timeline-list .timeline-item .item-header .timeline-date {
   color: var(--primary-500);
   font-family: "IBMPlexSans-Regular";
   line-height: 21px;
 }
-.project-page .timeline .container .wrapper .timeline-item .timeline-content p.subtitle-small {
+.project-page .timeline .container .wrapper .timeline-list .timeline-item .timeline-content p.subtitle-small {
   font-family: "IBMPlexSans-Regular";
 }
-.project-page .timeline .container .wrapper .timeline-item:nth-last-child(-n+2) {
-  margin-bottom: 100px;
-}
-.project-page .timeline .container .wrapper .read-more {
+.project-page .timeline .container .read-more {
   text-align: center;
   max-width: 220px;
   margin: auto;
 }
-.project-page .timeline .container .wrapper .read-more button {
+.project-page .timeline .container .read-more button {
   width: 100%;
   background: white;
   border: 1px solid var(--primary-900);
@@ -1704,92 +1707,100 @@ nav .nav-mobile {
 }
 @media only screen and (max-width: 480px) {
   .project-page .hero-header {
-    padding-top: 76px;
-    padding-bottom: 30px;
+    padding-top: 105px;
+    padding-bottom: 85px;
   }
   .project-page .hero-header .header {
     max-width: 725px;
     margin: 0 auto;
+    text-align: center;
   }
   .project-page .hero-header .header .title {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 6px;
+    display: block;
+    margin-bottom: 32px;
   }
-  .project-page .hero-header .header .title img {
-    margin-left: 32px;
+  .project-page .hero-header .header .title h2 {
+    margin-bottom: 9px;
   }
-  .project-page .hero-header .header .title img:hover {
-    cursor: pointer;
+  .project-page .hero-header .header .title a .title-2 {
+    font-family: "IBMPlexSans-Medium";
+    font-size: 15px;
+    color: #2A74FF;
+  }
+  .project-page .hero-header .header .title a .mobile {
+    display: inline-block;
+  }
+  .project-page .hero-header .header .title a i {
+    margin-left: 5px;
+    vertical-align: middle;
+    color: #2A74FF;
+    font-size: 18px;
+  }
+  .project-page .hero-header .header p.subtitle-1 {
+    font-size: 16px;
   }
   .project-page .hero-header .header .cta-flex {
-    justify-content: center;
-    margin-top: 40px;
-  }
-  .project-page .hero-header .header .cta-flex .profile-pic {
-    max-width: 24px;
-    max-height: 20px;
-  }
-  .project-page .hero-header .header .cta-flex .profile-pic img {
-    max-width: 24px;
-    max-height: 24px;
+    margin-top: 32px;
   }
   .project-page .timeline {
-    padding-top: 77px;
+    padding-top: 32px;
     padding-bottom: 100px;
   }
   .project-page .timeline .container {
-    width: 446px;
+    margin: 0 auto;
+    width: 298px;
     min-width: 200px;
   }
   .project-page .timeline .container .header {
-    margin-bottom: 30px;
+    margin-bottom: 16px;
   }
   .project-page .timeline .container .header p {
+    margin-left: 46px;
     color: var(--primary-500);
+    font-size: 10px;
   }
   .project-page .timeline .container .wrapper {
-    position: relative;
-    margin: 0 auto;
+    gap: 20px;
+    margin-bottom: 12px;
   }
-  .project-page .timeline .container .wrapper .timeline-sidebar {
-    position: absolute;
-    left: -64px;
-    top: 0;
+  .project-page .timeline .container .wrapper .timeline-sidebar img.desktop {
+    display: none;
   }
-  .project-page .timeline .container .wrapper .timeline-sidebar img {
-    width: 40px;
+  .project-page .timeline .container .wrapper .timeline-sidebar img.mobile {
+    display: inline-block;
+    width: 26px;
   }
-  .project-page .timeline .container .wrapper .timeline-item {
-    margin-bottom: 38px;
+  .project-page .timeline .container .wrapper .timeline-list {
+    width: 253px;
+    line-height: 120%;
   }
-  .project-page .timeline .container .wrapper .timeline-item .item-header {
-    margin-bottom: 10px;
+  .project-page .timeline .container .wrapper .timeline-list .timeline-item {
+    margin-bottom: 23px;
   }
-  .project-page .timeline .container .wrapper .timeline-item .item-header .title-2 {
-    line-height: 36px;
+  .project-page .timeline .container .wrapper .timeline-list .timeline-item .item-header {
+    margin-bottom: 7px;
   }
-  .project-page .timeline .container .wrapper .timeline-item .item-header .title-2.semi-bold {
+  .project-page .timeline .container .wrapper .timeline-list .timeline-item .item-header .title-2 {
+    font-size: 17px;
+    line-height: 26px;
+  }
+  .project-page .timeline .container .wrapper .timeline-list .timeline-item .item-header .title-2.semi-bold {
     font-family: "NeueHaasDisplayMedium";
   }
-  .project-page .timeline .container .wrapper .timeline-item .item-header .timeline-date {
-    color: var(--primary-500);
-    font-family: "IBMPlexSans-Regular";
-    line-height: 21px;
+  .project-page .timeline .container .wrapper .timeline-list .timeline-item .item-header .timeline-date {
+    font-size: 9px;
+    line-height: 13px;
   }
-  .project-page .timeline .container .wrapper .timeline-item .timeline-content p.subtitle-small {
-    font-family: "IBMPlexSans-Regular";
+  .project-page .timeline .container .wrapper .timeline-list .timeline-item .timeline-content p.subtitle-small {
+    font-size: 11px;
+    line-height: 14px;
   }
-  .project-page .timeline .container .wrapper .timeline-item:nth-last-child(-n+2) {
-    margin-bottom: 100px;
-  }
-  .project-page .timeline .container .wrapper .read-more {
+  .project-page .timeline .container .read-more {
     text-align: center;
-    max-width: 220px;
+    max-width: 270px;
     margin: auto;
   }
-  .project-page .timeline .container .wrapper .read-more button {
+  .project-page .timeline .container .read-more button {
     width: 100%;
     background: white;
     border: 1px solid var(--primary-900);
