--- a/SparcWeb/wwwroot/Styles/Page/Project.scss
+++ b/SparcWeb/wwwroot/Styles/Page/Project.scss
@@ -84,12 +84,14 @@
                     width: 380px;
 
                     .timeline-item {
-                        margin-bottom: 38px;
+                        margin-bottom: 34px;
 
                         .item-header {
                             margin-bottom: 10px;
 
                             .title-2 {
+                                line-height: 36px;
+
                                 &.semi-bold {
                                     font-family: 'NeueHaasDisplayMedium';
                                 }
@@ -105,6 +107,7 @@
                         .timeline-content {
                             p.subtitle-small {
                                 font-family: 'IBMPlexSans-Regular';
+                                line-height: 18px;
                             }
                         }
                     }
@@ -217,19 +220,16 @@
                         font-size: 14px;
                         color: $peach-500;
                     }
+                }
 
-                    .subtitle-large {
-                        font-size: 24px;
-                    }
+                .subtitle-large {
+                    font-size: 24px;
                 }
             }
         }
     }
 
     @media only screen and (max-width: 760px) {
-    }
-
-    @media only screen and (max-width: 480px) {
         .hero-header {
             padding-top: 105px;
             padding-bottom: 85px;
@@ -277,9 +277,170 @@
             }
         }
 
+        .community {
+            width: 100%;
+            padding-top: 70px;
+            padding-bottom: 40px;
+            text-align: center;
+
+            .container {
+                .card-wrapper {
+                    width: 100%;
+                    height: 100%;
+                    margin: 0 auto;
+                    flex-direction: column-reverse;
+                    justify-content: space-between;
+                    gap: 32px;
+                    background: $white;
+                    border-radius: 24px;
+
+                    .community-card {
+                        width: 100%;
+                        height: 100%;
+                        margin: 0 auto;
+                        padding: 48px 40px;
+                        border-radius: 24px;
+                        background: $yellow-100;
+
+                        .card-header {
+                            padding-top: 0;
+                        }
+
+                        p {
+                            font-size: 20px;
+                            line-height: 22px;
+                        }
+
+                        button {
+                            width: 100%;
+                            padding: 16px 17px;
+                            font-family: 'NeueHaasDisplayMedium';
+                            font-size: 16px;
+                        }
+
+                        .cta-flex {
+                            margin-left: 8px;
+                            justify-content: flex-start;
+
+                            .profile-pics-wrapper {
+                                width: 100%;
+                                justify-content: center;
+                            }
+                        }
+
+                        &.badge {
+                            padding: 0 40px;
+                            padding-bottom: 48px;
+                            border-radius: 24px;
+
+                            .sparc-badge {
+                                position: absolute;
+                                text-align: center;
+                                top: 0;
+                                left: 50%;
+                                transform: translate(-50%,-50%);
+                            }
+                        }
+
+                        .community-signup {
+                            font-size: 16px;
+
+                            .community-join {
+                                display: flex;
+                                flex-direction: column;
+
+                                input {
+                                    width: 100%;
+                                    border: 1px solid rgba(104, 105, 110, 0.5);
+                                    background: $white;
+                                    color: $grey-500;
+                                    opacity: 0.5;
+                                    font-family: 'NeueHaasDisplayRoman';
+                                    font-size: 16px;
+                                    text-align: left;
+                                }
+                            }
+
+                            p {
+                                font-size: 16px;
+                            }
+                        }
+                    }
+
+                    .divider {
+                        display: none;
+                    }
+                }
+            }
+        }
+
+        .resources {
+            height: 100%;
+            padding-top: 40px;
+            padding-bottom: 438px;
+
+            .header {
+                width: 100%;
+                margin: 0 auto;
+                margin-bottom: 40px;
+                text-align: center;
+
+                h3 {
+                    margin-bottom: 8px;
+                    font-size: 32px;
+                }
+
+                p {
+                    max-width: 60%;
+                    margin: 0 auto;
+                }
+            }
+
+            .blog-wrapper {
+                width: 100%;
+                padding-bottom: 15px;
+                max-width: none;
+                display: flex;
+                flex-wrap: nowrap;
+                flex-direction: row;
+                justify-content: normal;
+                gap: 32px;
+                overflow-x: scroll;
+                position: absolute;
+                left: 0;
+
+                .blog-card {
+                    width: 100%;
+
+                    img {
+                        width: 264px;
+                    }
+
+                    &:first-child {
+                        margin-left: 40px;
+                    }
+
+                    &:last-child {
+                        padding-right: 40px;
+                    }
+
+                    .blog-tags {
+                        margin-top: 16px;
+                    }
+
+                    .subtitle-large {
+                        font-size: 24px;
+                    }
+                }
+            }
+        }
+    }
+
+    @media only screen and (max-width: 480px) {
         .timeline {
+            padding: 0 17px;
             padding-top: 32px;
-            padding-bottom: 100px;
+            padding-bottom: 70px;
 
             .container {
                 margin: 0 auto;
@@ -308,6 +469,7 @@
                         img.mobile {
                             display: inline-block;
                             width: 26px;
+                            margin-top: 4px;
                         }
                     }
 
@@ -363,100 +525,71 @@
         }
 
         .community {
-            width: 100%;
-            padding-top: 100px;
-
-            .card-wrapper {
-                width: 1268px;
-                height: 419px;
-                margin: 0 auto;
-                gap: 0px;
-                background: $yellow-100;
-                border-radius: 24px;
-
-                .community-card {
+            .container {
+                .card-wrapper {
                     width: 100%;
-                    height: 100%;
-                    margin: 0;
-                    border-top-right-radius: 0px;
-                    border-bottom-right-radius: 0px;
 
-                    .cta-flex {
-                        margin-left: 8px;
-                        justify-content: flex-start;
+                    .community-card {
+                        padding: 48px 17px;
+
+                        p {
+                            font-size: 16px;
+                            line-height: 22px;
+                        }
+
+                        button {
+                            padding: 16px 14px;
+                        }
+
+                        &.badge {
+                            padding: 48px 17px;
+                        }
+
+                        .community-signup {
+                            font-size: 16px;
+
+                            .community-join {
+                                display: flex;
+                                flex-direction: column;
+
+                                input {
+                                    width: 100%;
+                                    border: 1px solid rgba(104, 105, 110, 0.5);
+                                    background: $white;
+                                    color: $grey-500;
+                                    opacity: 0.5;
+                                    font-family: 'NeueHaasDisplayRoman';
+                                    font-size: 16px;
+                                    text-align: left;
+                                }
+                            }
+                        }
                     }
-
-                    &.badge {
-                        border-radius: 24px;
-                        border-top-left-radius: 0px;
-                        border-bottom-left-radius: 0px;
-                    }
-
-                    input {
-                        border: 1px solid rgba(104, 105, 110, 0.5);
-                        background: $white;
-                        color: $grey-500;
-                        opacity: 0.5;
-                    }
-                }
-
-                .divider {
-                    height: 75%;
-                    border: 0.5px solid $grey-500;
                 }
             }
         }
 
         .resources {
-            padding-top: 100px;
-            padding-bottom: 150px;
-
-            .header {
-                text-align: center;
-                max-width: 100%;
-                margin-bottom: 43px;
-
-                h3 {
-                    margin-bottom: 8px;
-                }
-
-                p {
-                    font-family: 'IBMPlexSans-Regular';
+            .blog-wrapper {
+                .blog-card {
+                    .subtitle-large {
+                        font-size: 20px;
+                    }
                 }
             }
+        }
+    }
 
-            .blog-wrapper {
+    @media only screen and (max-width: 332px) {
+        .timeline {
+            width: 100%;
+
+            .container {
                 width: 100%;
-                display: flex;
-                justify-content: center;
-                gap: 32px;
+                min-width: none;
 
-                .blog-card {
-                    width: 384px;
-
-                    img {
-                        width: 100%;
-                    }
-
-                    .blog-tags {
-                        margin-top: 42px;
-
-                        .tag {
-                            margin: 0;
-                            padding: 0;
-                            border: none;
-                            font-family: 'IBMPlexSans-Regular';
-                        }
-
-                        .tag-divider {
-                            font-size: 14px;
-                            color: $peach-500;
-                        }
-
-                        .subtitle-large {
-                            font-size: 24px;
-                        }
-                    }
+                .timeline-list {
+                    width: 100%;
                 }
             }
         }
