--- a/SparcWeb/wwwroot/css/app.css
+++ b/SparcWeb/wwwroot/css/app.css
@@ -1100,7 +1100,7 @@ nav .nav-mobile {
     left: 0;
     width: 100%;
     padding-bottom: 15px;
-    overflow: scroll;
+    overflow-x: scroll;
     flex-wrap: nowrap;
     flex-direction: row;
     justify-content: normal;
@@ -1117,6 +1117,9 @@ nav .nav-mobile {
   .homepage .community {
     padding-top: 64px;
     padding-bottom: 64px;
+  }
+  .homepage .community .header h5 {
+    margin: 0 auto;
   }
   .homepage .community .card-wrapper {
     margin-top: 124px;
@@ -1155,15 +1158,15 @@ nav .nav-mobile {
     padding-top: 64px;
     padding-bottom: 438px;
   }
-  .homepage .resources p.title-2 {
-    text-align: left;
+  .homepage .resources .header h5 {
+    margin: 0 auto;
   }
   .homepage .resources .blog-wrapper {
     position: absolute;
     left: 0;
     width: 100%;
     padding-bottom: 15px;
-    overflow: scroll;
+    overflow-x: scroll;
     flex-wrap: nowrap;
     flex-direction: row;
     justify-content: normal;
@@ -1184,7 +1187,7 @@ nav .nav-mobile {
     justify-content: center;
   }
   .homepage .resources .blog-wrapper .blog-card p.title-2 {
-    text-align: center;
+    text-align: left;
   }
 }
 @media only screen and (max-width: 480px) {
@@ -1596,10 +1599,13 @@ nav .nav-mobile {
   width: 380px;
 }
 .project-page .timeline .container .wrapper .timeline-list .timeline-item {
-  margin-bottom: 38px;
+  margin-bottom: 34px;
 }
 .project-page .timeline .container .wrapper .timeline-list .timeline-item .item-header {
   margin-bottom: 10px;
+}
+.project-page .timeline .container .wrapper .timeline-list .timeline-item .item-header .title-2 {
+  line-height: 36px;
 }
 .project-page .timeline .container .wrapper .timeline-list .timeline-item .item-header .title-2.semi-bold {
   font-family: "NeueHaasDisplayMedium";
@@ -1611,6 +1617,7 @@ nav .nav-mobile {
 }
 .project-page .timeline .container .wrapper .timeline-list .timeline-item .timeline-content p.subtitle-small {
   font-family: "IBMPlexSans-Regular";
+  line-height: 18px;
 }
 .project-page .timeline .container .read-more {
   text-align: center;
@@ -1702,10 +1709,10 @@ nav .nav-mobile {
   font-size: 14px;
   color: #FF756A;
 }
-.project-page .resources .blog-wrapper .blog-card .blog-tags .subtitle-large {
+.project-page .resources .blog-wrapper .blog-card .subtitle-large {
   font-size: 24px;
 }
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 760px) {
   .project-page .hero-header {
     padding-top: 105px;
     padding-bottom: 85px;
@@ -1742,9 +1749,142 @@ nav .nav-mobile {
   .project-page .hero-header .header .cta-flex {
     margin-top: 32px;
   }
+  .project-page .community {
+    width: 100%;
+    padding-top: 70px;
+    padding-bottom: 40px;
+    text-align: center;
+  }
+  .project-page .community .container .card-wrapper {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+    gap: 32px;
+    background: #FFFFFF;
+    border-radius: 24px;
+  }
+  .project-page .community .container .card-wrapper .community-card {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    padding: 48px 40px;
+    border-radius: 24px;
+    background: #F2EDDF;
+  }
+  .project-page .community .container .card-wrapper .community-card .card-header {
+    padding-top: 0;
+  }
+  .project-page .community .container .card-wrapper .community-card p {
+    font-size: 20px;
+    line-height: 22px;
+  }
+  .project-page .community .container .card-wrapper .community-card button {
+    width: 100%;
+    padding: 16px 17px;
+    font-family: "NeueHaasDisplayMedium";
+    font-size: 16px;
+  }
+  .project-page .community .container .card-wrapper .community-card .cta-flex {
+    margin-left: 8px;
+    justify-content: flex-start;
+  }
+  .project-page .community .container .card-wrapper .community-card .cta-flex .profile-pics-wrapper {
+    width: 100%;
+    justify-content: center;
+  }
+  .project-page .community .container .card-wrapper .community-card.badge {
+    padding: 0 40px;
+    padding-bottom: 48px;
+    border-radius: 24px;
+  }
+  .project-page .community .container .card-wrapper .community-card.badge .sparc-badge {
+    position: absolute;
+    text-align: center;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .project-page .community .container .card-wrapper .community-card .community-signup {
+    font-size: 16px;
+  }
+  .project-page .community .container .card-wrapper .community-card .community-signup .community-join {
+    display: flex;
+    flex-direction: column;
+  }
+  .project-page .community .container .card-wrapper .community-card .community-signup .community-join input {
+    width: 100%;
+    border: 1px solid rgba(104, 105, 110, 0.5);
+    background: #FFFFFF;
+    color: #68696E;
+    opacity: 0.5;
+    font-family: "NeueHaasDisplayRoman";
+    font-size: 16px;
+    text-align: left;
+  }
+  .project-page .community .container .card-wrapper .community-card .community-signup p {
+    font-size: 16px;
+  }
+  .project-page .community .container .card-wrapper .divider {
+    display: none;
+  }
+  .project-page .resources {
+    height: 100%;
+    padding-top: 40px;
+    padding-bottom: 438px;
+  }
+  .project-page .resources .header {
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 40px;
+    text-align: center;
+  }
+  .project-page .resources .header h3 {
+    margin-bottom: 8px;
+    font-size: 32px;
+  }
+  .project-page .resources .header p {
+    max-width: 60%;
+    margin: 0 auto;
+  }
+  .project-page .resources .blog-wrapper {
+    width: 100%;
+    padding-bottom: 15px;
+    max-width: none;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: normal;
+    gap: 32px;
+    overflow-x: scroll;
+    position: absolute;
+    left: 0;
+  }
+  .project-page .resources .blog-wrapper .blog-card {
+    width: 100%;
+  }
+  .project-page .resources .blog-wrapper .blog-card img {
+    width: 264px;
+  }
+  .project-page .resources .blog-wrapper .blog-card:first-child {
+    margin-left: 40px;
+  }
+  .project-page .resources .blog-wrapper .blog-card:last-child {
+    padding-right: 40px;
+  }
+  .project-page .resources .blog-wrapper .blog-card .blog-tags {
+    margin-top: 16px;
+  }
+  .project-page .resources .blog-wrapper .blog-card .subtitle-large {
+    font-size: 24px;
+  }
+}
+@media only screen and (max-width: 480px) {
   .project-page .timeline {
+    padding: 0 17px;
     padding-top: 32px;
-    padding-bottom: 100px;
+    padding-bottom: 70px;
   }
   .project-page .timeline .container {
     margin: 0 auto;
@@ -1769,6 +1909,7 @@ nav .nav-mobile {
   .project-page .timeline .container .wrapper .timeline-sidebar img.mobile {
     display: inline-block;
     width: 26px;
+    margin-top: 4px;
   }
   .project-page .timeline .container .wrapper .timeline-list {
     width: 253px;
@@ -1807,86 +1948,53 @@ nav .nav-mobile {
     border-radius: 5px;
     color: var(--primary-900);
   }
-  .project-page .community {
+  .project-page .community .container .card-wrapper {
     width: 100%;
-    padding-top: 100px;
   }
-  .project-page .community .card-wrapper {
-    width: 1268px;
-    height: 419px;
-    margin: 0 auto;
-    gap: 0px;
-    background: #F2EDDF;
-    border-radius: 24px;
+  .project-page .community .container .card-wrapper .community-card {
+    padding: 48px 17px;
   }
-  .project-page .community .card-wrapper .community-card {
+  .project-page .community .container .card-wrapper .community-card p {
+    font-size: 16px;
+    line-height: 22px;
+  }
+  .project-page .community .container .card-wrapper .community-card button {
+    padding: 16px 14px;
+  }
+  .project-page .community .container .card-wrapper .community-card.badge {
+    padding: 48px 17px;
+  }
+  .project-page .community .container .card-wrapper .community-card .community-signup {
+    font-size: 16px;
+  }
+  .project-page .community .container .card-wrapper .community-card .community-signup .community-join {
+    display: flex;
+    flex-direction: column;
+  }
+  .project-page .community .container .card-wrapper .community-card .community-signup .community-join input {
     width: 100%;
-    height: 100%;
-    margin: 0;
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
-  }
-  .project-page .community .card-wrapper .community-card .cta-flex {
-    margin-left: 8px;
-    justify-content: flex-start;
-  }
-  .project-page .community .card-wrapper .community-card.badge {
-    border-radius: 24px;
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-  }
-  .project-page .community .card-wrapper .community-card input {
     border: 1px solid rgba(104, 105, 110, 0.5);
     background: #FFFFFF;
     color: #68696E;
     opacity: 0.5;
+    font-family: "NeueHaasDisplayRoman";
+    font-size: 16px;
+    text-align: left;
   }
-  .project-page .community .card-wrapper .divider {
-    height: 75%;
-    border: 0.5px solid #68696E;
+  .project-page .resources .blog-wrapper .blog-card .subtitle-large {
+    font-size: 20px;
   }
-  .project-page .resources {
-    padding-top: 100px;
-    padding-bottom: 150px;
-  }
-  .project-page .resources .header {
-    text-align: center;
-    max-width: 100%;
-    margin-bottom: 43px;
-  }
-  .project-page .resources .header h3 {
-    margin-bottom: 8px;
-  }
-  .project-page .resources .header p {
-    font-family: "IBMPlexSans-Regular";
-  }
-  .project-page .resources .blog-wrapper {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    gap: 32px;
-  }
-  .project-page .resources .blog-wrapper .blog-card {
-    width: 384px;
-  }
-  .project-page .resources .blog-wrapper .blog-card img {
+}
+@media only screen and (max-width: 332px) {
+  .project-page .timeline {
     width: 100%;
   }
-  .project-page .resources .blog-wrapper .blog-card .blog-tags {
-    margin-top: 42px;
+  .project-page .timeline .container {
+    width: 100%;
+    min-width: none;
   }
-  .project-page .resources .blog-wrapper .blog-card .blog-tags .tag {
-    margin: 0;
-    padding: 0;
-    border: none;
-    font-family: "IBMPlexSans-Regular";
-  }
-  .project-page .resources .blog-wrapper .blog-card .blog-tags .tag-divider {
-    font-size: 14px;
-    color: #FF756A;
-  }
-  .project-page .resources .blog-wrapper .blog-card .blog-tags .subtitle-large {
-    font-size: 24px;
+  .project-page .timeline .container .timeline-list {
+    width: 100%;
   }
 }
 
