--- a/SparcWeb/wwwroot/Styles/Page/Project.scss
+++ b/SparcWeb/wwwroot/Styles/Page/Project.scss
@@ -543,6 +543,7 @@
 
                         &.badge {
                             padding: 48px 17px;
+                            padding-top: 8px;
                         }
 
                         .community-signup {
