--- a/SparcWeb/app.scss
+++ b/SparcWeb/app.scss
@@ -2,6 +2,7 @@
 @import "wwwroot/Styles/Global/_assets.scss";
 @import "wwwroot/Styles/Global/_typography.scss";
 @import "wwwroot/Styles/Global/_nav.scss";
+@import "wwwroot/Styles/Global/_projectcard.scss";
 
 @import "wwwroot/Styles/Page/Index.scss";
 @import "wwwroot/Styles/Page/ProjectList.scss";
