--- a/SparcWeb/App.razor
+++ b/SparcWeb/App.razor
@@ -1,4 +1,4 @@
-﻿@*<Router AppAssembly="@typeof(App).Assembly">
+﻿<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
@@ -9,8 +9,8 @@
             <p role="alert">Sorry, there's nothing at this address.</p>
         </LayoutView>
     </NotFound>
-</Router>*@
-
+</Router>
+@*
 <Sparc.Platforms.Web.SparcApp 
         MainLayout="typeof(MainLayout)" 
-        Startup="typeof(Program)" />
+        Startup="typeof(Program)" />*@
