--- a/SparcWeb/Pages/Blog.razor
+++ b/SparcWeb/Pages/Blog.razor
@@ -1,4 +1,4 @@
-@page "/Blogs/{Title}"
+@page "/blogs/{title}"
 
 <section class="blog-page">
     <div class="container">
@@ -34,3 +34,12 @@
         </div>
     </div>
 </section>
+
+@code {
+    [Parameter] public string title { get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        await Ibis.InitAsync("sparc");
+    }
+}
