--- a/SparcWeb/Shared/NavMenu.razor
+++ b/SparcWeb/Shared/NavMenu.razor
@@ -1,35 +1,24 @@
 ﻿<nav>
     <div class="nav-desktop">
-        <div class="logo">
+        <a href="/" class="logo">
             <img src="./images/icons/Logo.png" />
-        </div>
+        </a>
         <div class="nav-links-wrapper">
             <div class="nav-link">
                 <a href="#">Home</a>
             </div>
             <div class="nav-link">
-                <a href="/Blogs">Resources</a>
-            </div>
-            <div class="nav-link">
                 <a href="/Projects">Projects</a>
             </div>
+            @*<div class="nav-link">
+                <a href="/Blogs">Resources</a>
+            </div>*@
             <div class="nav-link">
                 <a href="/Contact">Contact</a>
             </div>
         </div>
         <div class="community-join">
             <div class="cta-flex">
-                <div class="profile-pics-wrapper">
-                    <div class="profile-pic">
-                        <img src="images/Picture.png" />
-                    </div>
-                    <div class="profile-pic">
-                        <img src="images/Picture.png" />
-                    </div>
-                    <div class="profile-pic">
-                        <img src="images/Picture.png" />
-                    </div>
-                </div>
                 <div>
                     <button>Join community</button>
                 </div>
