--- a/SparcWeb/wwwroot/Styles/Global/_assets.scss
+++ b/SparcWeb/wwwroot/Styles/Global/_assets.scss
@@ -28,7 +28,6 @@ section:last-of-type {
 .values-tag {
     background: white;
 
-
     p {
         color: var(--error-500);
     }
@@ -76,40 +75,6 @@ section:last-of-type {
         font-weight: 400;
     }
 }
-.project-card {
-    .card-tags-wrapper {
-        display: flex;
-        justify-content: space-between;
-
-        .card-tags {
-            button {
-                border: none;
-                color: $purple-500;
-                background: var(--secondary-500);
-                border-radius: 100px;
-            }
-
-            button:hover {
-                background: var(--secondary-300);
-            }
-        }
-
-        .card-github {
-            button {
-                padding: 4px 14px 3px 14px;
-                background: $white;
-                border: 1px solid $grey-100;
-                border-radius: 100px;
-                opacity: 0.75;
-
-                img {
-                    width: 15px;
-                    opacity: 0.75;
-                }
-            }
-        }
-    }
-}
 
 //buttons
 button {
@@ -137,6 +102,7 @@ button {
     border: 1px solid var(--grey-900);
     border-radius: 24px;
     max-width: 562px;
+    max-height: 117px;
     margin: 0 auto;
 
     .box-header {
@@ -170,39 +136,7 @@ button {
 
 //hero
 .hero-header {
-    padding: 220px 0;
     background: $yellow-100;
-}
-
-//Projects
-.project-card {
-    background: white;
-    padding: 32px;
-    border-radius: 24px;
-    margin-bottom: 32px;
-
-    .image-wrapper {
-        margin-bottom: 24px;
-
-        img {
-            width: 100%;
-        }
-    }
-
-    .card-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 8px;
-
-        .image-wrapper {
-            margin-bottom: 0;
-        }
-    }
-
-    .card-tags-wrapper {
-        margin-top: 20px;
-    }
 }
 
 //Community Component
