--- a/SparcWeb/wwwroot/Styles/Page/index.scss
+++ b/SparcWeb/wwwroot/Styles/Page/index.scss
@@ -6,15 +6,17 @@
     }
 
     .home-hero {
-        padding-top: 122px;
+        padding-top: 100px;
         padding-bottom: 24px;
         background: $yellow-100;
         position: relative;
+        box-sizing: border-box;
+        height: calc(100vh - 103px);
 
         .header {
             width: 100%;
             margin: 0 auto;
-            margin-bottom: 72px;
+            margin-bottom: 52px;
 
             h1 {
                 width: 80%;
@@ -23,6 +25,10 @@
                 margin-bottom: 16px;
                 font-size: 96px;
                 line-height: 115px;
+
+                @media only screen and (max-width: 1420px) {
+                    width: 90%;
+                }
             }
 
             p.subtitle-1 {
@@ -61,7 +67,7 @@
 
     .learn-more {
         margin: 0 auto;
-        margin-top: 122px;
+        margin-top: 50px;
         text-align: center;
 
         a:hover {
@@ -200,27 +206,16 @@
 
                     .project-card {
                         width: 100%;
+                        max-width: 520px;
+                        height: 531px;
+                        padding: 32px;
                         margin-bottom: 0px;
+                        background: $white;
+                        border-radius: 24px;
 
-                        .card-content {
-                            .image-wrapper {
-                                position: relative;
-
-                                img.project-status {
-                                    position: absolute;
-                                    top: 8px;
-                                    right: 8px;
-                                }
-
-                                img.in-progress {
-                                    width: 109px;
-                                }
-
-                                img.live {
-                                    width: 67px;
-                                }
-                            }
-                        }
+                        .card-header img {
+                            cursor: pointer;
+                        }                                                              
                     }
                 }
 
